Implementazione Spring Security

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,3 +13,7 @@ spring.servlet.multipart.max-request-size=100MB
 cloudinary.cloud_name=${CL_NAME}
 cloudinary.api_key=${CL_KEY}
 cloudinary.api_secret=${CL_SECRET}
+
+jwt.secret=${JWT_SECRET}
+# Durata del token in millisecondi
+jwt.expiration=3600000
